deployment/kubernetes/deployment-fastapi.yaml
# FastAPI Model Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-model-service
  namespace: hpp
  labels:
    app: fastapi-model-service
    version: v1
    component: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-model-service
  template:
    metadata:
      labels:
        app: fastapi-model-service
        version: v1
        component: api
    spec:
      restartPolicy: Always
      containers:
        - name: fastapi-app
          image: siriob52/fastapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"


---
# FastAPI Service
apiVersion: v1
kind: Service
metadata:
  name: fastapi-model-service
  namespace: hpp
  labels:
    app: fastapi-model-service
    service: api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  - port: 9100
    targetPort: 9100
    protocol: TCP
    name: metrics
  selector:
    app: fastapi-model-service
